implemented Transfer amount and printstatement api
